--- a/docker-compose-pytest.yml
+++ b/docker-compose-pytest.yml
@@ -5,7 +5,7 @@ version: "3.8"
 services:
   foundry:
     # Run the container normally
-    image: armyguy255a/foundryvtt:latest
+    image: armyguy255a/foundryvtt-ssl:latest
     hostname: felddy_foundryvtt
     init: true
     restart: "no"
@@ -29,7 +29,7 @@ services:
 
   foundry-version:
     # Run the container to collect version information
-    image: armyguy255a/foundryvtt:latest
+    image: armyguy255a/foundryvtt-ssl:latest
     init: true
     restart: "no"
     command: --version
